--- a/pkg/manage/config.yaml
+++ b/pkg/manage/config.yaml
@@ -1,5 +1,8 @@
 #服务配置
 server:
+  #是否注册服务
+  register: true
+
   #本地服务
   local: true
 
@@ -31,6 +34,7 @@ server:
 
 #客服配置
 client:
+  find: true
   server:
     admin1:
       #服务名
